// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        />
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
                style="transform: translateX(0px);"
              />
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-size-m t-is-active t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`combination.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add t-size-m"
              fill="none"
              height="1em"
              name="add"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add t-size-m"
              fill="none"
              height="1em"
              name="add"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        />
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
                style="transform: translateX(0px);"
              />
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-size-m t-is-top t-is-disabled"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡一
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-active t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡二
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          style="margin: 20px;"
        >
          这是一个Tabs
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-tabs"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        切换到卡片型
      </span>
    </button>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        <svg
                          class="t-icon t-icon-discount t-size-m"
                          fill="none"
                          height="1em"
                          viewBox="0 0 16 16"
                          width="1em"
                        >
                          <path
                            d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
                            fill="currentColor"
                            fill-opacity="0.9"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
                            fill="currentColor"
                            fill-opacity="0.9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        <svg
                          class="t-icon t-icon-discount t-size-m"
                          fill="none"
                          height="1em"
                          viewBox="0 0 16 16"
                          width="1em"
                        >
                          <path
                            d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
                            fill="currentColor"
                            fill-opacity="0.9"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
                            fill="currentColor"
                            fill-opacity="0.9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        <svg
                          class="t-icon t-icon-discount t-size-m"
                          fill="none"
                          height="1em"
                          viewBox="0 0 16 16"
                          width="1em"
                        >
                          <path
                            d="M7.84 5.01A2 2 0 115 7.84 2 2 0 017.84 5zm-.7.7a1 1 0 10-1.42 1.42 1 1 0 001.41-1.41z"
                            fill="currentColor"
                            fill-opacity="0.9"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M2 7.95V2h5.95a1 1 0 01.7.3l6.14 6.13a1 1 0 010 1.41L9.84 14.8a1 1 0 01-1.41 0L2.29 8.66A1 1 0 012 7.95zM7.95 3l6.13 6.13-4.95 4.95L3 7.95V3h4.95z"
                            fill="currentColor"
                            fill-opacity="0.9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            class="tabs-content"
            style="margin: 20px;"
          >
            选项卡1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add t-size-m"
              fill="none"
              height="1em"
              name="add"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`position.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          top
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          bottom
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          left
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          right
        </span>
      </button>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡2
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡3
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡4
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡5
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡6
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡7
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            class="tabs-content"
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          medium
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          large
        </span>
      </button>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡一
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡二
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-tabs__nav--card t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡一
                  </span>
                </div>
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡二
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          default
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          card
        </span>
      </button>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        2
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
